Offer Page Polish 7

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -604,9 +604,18 @@ placeholder.replaceWith(iframe);
         <div class="additional-info" id="info-new" style="display: none;">
           <h4>Your Complete Fitness Solution</h4>
           <ul class="offer-includes">
-            <li>🏋️<Strong> Workouts that adapt</Strong> based on your performance and feedback</li>
-            <li>🍽️ <Strong>Meals that match your routine</Strong> and fit around your lifestyle</li>
-            <li>🤖 <strong>AI-powered tools</strong> - the Meal and Body Scanner track and visualize your progress</li>
+            <li id="offerWorkoutsLine">
+              🏋️ <strong>Workouts that adapt</strong> based on your performance and feedback.
+            </li>
+            <li id="offerMealsLine">
+              🍽️ <strong>Meals that match your routine</strong> and fit around your lifestyle.
+            </li>
+            <li>
+              🤖 AI Meal and Body Scanners that track and visualize your progress.
+            </li>
+            <li id="offerEmotionLine">
+              💛 <strong>Everything lives in one app</strong> so you feel supported, not overwhelmed.
+            </li>
             <!-- <li>📈 <strong>1-on-1 online coaching</strong> with your assigned coach for expert guidance</li> -->
           </ul>
         </div>
