Offer Page Polish 8

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -416,7 +416,7 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 2,000+ people claimed their plan today.<br>You're next.</p>
+      <p class="first-1000">🔥 2,000+ claimed their plan today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
