Creator Partnership Tweaks

--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
@@ -54,7 +54,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
