--- a/client/pages/creator-partnership.html
+++ b/client/pages/creator-partnership.html
@@ -13,7 +13,7 @@
 <body>
     <header class="site-header">
         <div class="logo-wrap">
-            <a href="../index.html" class="logo-link">
+            <a href="../pages/home.html" class="logo-link">
                 <img src="../assets/creator-program-logo.png" alt="Raising The Bar" class="logo" loading="lazy">
             </a>
             <span class="tag">Creator Partnership</span>
@@ -28,8 +28,8 @@
         <section class="hero">
             <div class="hero-content">
                 <p class="eyebrow">For fitness creators who want revenue without risking their brand</p>
-                <h1>Launch your own premium fitness platform in days, not months.</h1>
-                <p class="lede">We build, brand, and operate a fully-personalized training platform for your audience.
+                <h1>Launch your own premium fitness app in days, not months.</h1>
+                <p class="lede">We build, brand, and operate a fully-personalized training app for your audience.
                     No upfront cost, no code, no support headaches.</p>
                 <div class="hero-actions">
                     <a class="primary" href="#call-form">Book a demo call</a>
@@ -53,9 +53,9 @@
             <div class="hero-card">
                 <h3>Your brand, our engine</h3>
                 <ul>
-                    <li>Full-platform branding that matches your identity</li>
-                    <li>Adaptive programs with trillions of variations</li>
-                    <li>Workout & nutrition trackers that feel premium</li>
+                    <li>Full-app branding that matches your identity</li>
+                    <li>Automatically generated programs with trillions of variations</li>
+                    <li>Adaptive workout & nutrition trackers that feel premium</li>
                     <li>Zero-risk launch with revenue share</li>
                 </ul>
                 <a class="primary full" href="#call-form">Book a demo call</a>
@@ -68,7 +68,7 @@
             <div class="pillars">
                 <div>
                     <h3>Protect your reputation</h3>
-                    <p>Launch a platform that makes followers feel seen: adaptive plans, emotional UX, and polished
+                    <p>Launch an app that makes followers feel seen: adaptive plans, emotional UX, and polished
                         design—all under your name.</p>
                 </div>
                 <div>
@@ -119,7 +119,7 @@
         <section class="features">
             <div class="section-header">
                 <p class="eyebrow">Built to feel premium</p>
-                <h2>Platform highlights</h2>
+                <h2>App highlights</h2>
             </div>
             <div class="feature-grid">
                 <div class="feature-card">
@@ -150,7 +150,8 @@
             <div class="video-card">
                 <div class="label">Demo video</div>
                 <div class="placeholder">Video coming soon</div>
-                <p class="caption">We’ll walk through the full funnel and dashboard so you can see exactly what your
+                <p class="caption">We’ll walk through the full funnel and app experience so you can see exactly what
+                    your
                     audience gets.</p>
             </div>
             <div class="video-copy">
@@ -194,7 +195,7 @@
 
         <section class="cta" id="call-form">
             <div class="cta-content">
-                <p class="eyebrow">Let’s build your platform</p>
+                <p class="eyebrow">Let’s build your app</p>
                 <h2>Tell us about your audience and goals.</h2>
                 <p class="lede">We’ll share a tailored demo, projected revenue scenarios, and next steps within one
                     business day.</p>
@@ -265,7 +266,7 @@
     <footer class="footer">
         <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
         <div class="footer-links">
-            <a href="../index.html">Home</a>
+            <a href="../home.html">Home</a>
             <span class="separator">|</span>
             <a href="legal-overview.html">Policies</a>
             <span class="separator">|</span>
