--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -173,7 +173,7 @@
 
   </section>
 
-  <section class="referral-banner" aria-label="Referral giveaway">
+  <!-- <section class="referral-banner" aria-label="Referral giveaway">
     <div class="referral-banner__inner">
       <div class="referral-banner__timer" id="referralCountdown" role="status" aria-live="polite">
         <span class="referral-banner__timer-label">Ends in</span>
@@ -184,13 +184,13 @@
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
           <div>
             <h2>Earn £10</h2>
-            <!-- <p class="referral-banner__subtitle">Each referral = one entry this month.</p> -->
+            <p class="referral-banner__subtitle">Each referral = one entry this month.</p>
           </div>
         </div>
 
-        <!-- <p class="referral-banner__lede">
+        <p class="referral-banner__lede">
           Win £1,000 for yourself — and both you and your referrals get 12 weeks of coaching, free.
-        </p> -->
+        </p>
 
         <p class="referral-banner__steps">
           <strong>How to earn:</strong>
@@ -208,7 +208,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Tracker cards -->
   <main class="cards">
@@ -263,7 +263,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
