--- a/client/pages/kickstart-guide.html
+++ b/client/pages/kickstart-guide.html
@@ -32,7 +32,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
