--- a/client/pages/payment-success.html
+++ b/client/pages/payment-success.html
@@ -42,7 +42,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <header class="success-header" role="banner">
     <div class="header">
       <div class="logo">
-        <a href="../index.html">
+        <a href="../pages/home.html">
           <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
