--- a/client/pages/plan-building.html
+++ b/client/pages/plan-building.html
@@ -48,7 +48,7 @@
   <header class="upgrade-header" role="banner">
     <div class="header">
       <div class="logo">
-        <a href="../index.html">
+        <a href="../pages/home.html">
           <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
