--- a/client/pages/copyright-notice.html
+++ b/client/pages/copyright-notice.html
@@ -14,7 +14,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
