--- a/client/pages/forgot-password.html
+++ b/client/pages/forgot-password.html
@@ -69,7 +69,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo">
       </a>
     </div>
@@ -130,7 +130,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="../index.html">Start Training</a>
+        <a href="../pages/home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
