--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -79,7 +79,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <div class="scroll">
     <div class="header">
       <div class="logo">
-        <a href="../index.html" class="logo">
+        <a href="../pages/home.html" class="logo">
           <picture>
             <!-- WebP first -->
             <source type="image/webp" srcset="/assets/rtb-logo-white-224.webp">
