--- a/client/pages/legal-overview.html
+++ b/client/pages/legal-overview.html
@@ -11,7 +11,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo" class="logo">
       </a>
     </div>
@@ -38,7 +38,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
