--- a/client/pages/log-in-dashboard.html
+++ b/client/pages/log-in-dashboard.html
@@ -60,7 +60,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 <body>
   <div class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
           <img id="logo" class="fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
