--- a/client/pages/log-in-kickstart.html
+++ b/client/pages/log-in-kickstart.html
@@ -79,7 +79,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <a href="../index.html">
+            <a href="../pages/home.html">
                 <img id="logo" class="fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
             </a>
         </div>
@@ -119,7 +119,7 @@
         <div class="footer-content">
             <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
             <div class="footer-links">
-                <a href="index.html">Start Training</a>
+                <a href="home.html">Start Training</a>
                 <span class="separator">|</span>
                 <a href="legal-overview.html">Our Policies</a>
                 <span class="separator">|</span>
