--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -111,7 +111,7 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
   </div>
   <div class="header">
     <div class="logo">
-      <a href="../index.html">
+      <a href="../pages/home.html">
         <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
@@ -985,7 +985,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
