--- a/client/pages/plan-upgrade.html
+++ b/client/pages/plan-upgrade.html
@@ -40,7 +40,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <header class="upgrade-header" role="banner">
     <div class="header">
       <div class="logo">
-        <a href="../index.html">
+        <a href="../pages/home.html">
           <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
