--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -15,7 +15,7 @@
   <!-- ───────────── HEADER ───────────── -->
   <header class="header">
     <div class="logo">
-      <a href="../index.html"><img id="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo"></a>
+      <a href="../pages/home.html"><img id="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo"></a>
     </div>
   </header>
 
@@ -185,7 +185,7 @@
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="index.html">Start Training</a>
+        <a href="home.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
