Bug Fixes and Polish

--- a/client/index.html
+++ b/client/index.html
@@ -106,14 +106,14 @@
                 <div class="step-card">
                     <div class="step-number">2</div>
                     <h3>Personalized offer</h3>
-                    <p>Adaptive offer page with 100k+ variations—shaped by goals, equipment, and deadlines, so it
-                        feels personal and valuable.</p>
+                    <p>Adaptive offer page shaped by goals, equipment, and deadlines, so it
+                        feels personal, valuable and drives conversions.</p>
 
                 </div>
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <h3>Instant app access</h3>
-                    <p>Users unlock tailored programs, macro targets, workout & nutrition trackers, streaks, and a
+                    <p>Users unlock tailored programs, macro targets, workout & nutrition trackers, progress tools, and a
                         welcome from you.</p>
                 </div>
             </div>
