--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -212,10 +212,10 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
         <div class="wi2-item pt-item" data-index="2">
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
         </div>
-        <div class="wi2-item pt-item" data-index="3">
+        <!-- <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> AI Meal & Body Scanners</h4>
-        </div>
-        <div class="wi2-item pt-item" data-index="4">
+        </div> -->
+        <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
         <!-- <div class="wi2-item pt-item" data-index="5">
